k8s/EKS/Planner-app/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: planner-app
  labels:
    app.kubernetes.io/name: planner-app
    environment: dev
