k8s/EKS/Planner-app/07-planner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planner-deployment
  namespace: planner-app
  labels:
    app: planner-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: planner-app-selector-name
  template:
    metadata:
      labels:
        app: planner-app-selector-name
    spec:
      # InitContainer prevents Spring Boot CrashLoopBackOff:
      # Ensures MySQL is actively listening on port 3306 before Spring Boot boots up
      containers:
        - name: planner-container
          image: canzova/planner:0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: planner-service
  namespace: planner-app
  labels:
    app: planner-service
spec:
  # ClusterIP: AWS Load Balancer Controller routes traffic directly to Pod IPs (ip target-type)
  type: ClusterIP
  selector:
    app: planner-app-selector-name
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
